environments/gloo-mesh-core/additional-cluster-1/clusterservices-config/base/kiali-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-gateways
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateways/https-gateway
  http:
  - name: kiali-ui
    match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali
        port:
          number: 20001
